Fixed save for new upgrade, also fixed alignment on Chrome

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -174,6 +174,8 @@ main {
             max-width: 265px;
             color: $text !important;
             justify-content: center !important;
+            align-items: center !important;
+            text-align: center !important;
 
             &:hover {
                 background-color: $secondary !important;
